--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"query-string": "^5.1.1",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
+		"react-icons": "^4.1.0",
 		"react-polyfills": "0.0.1"
 	}
 }
